gcc/testsuite/rust/rustc/ui/generator/yield-in-function.rs
#![feature(generators)]

fn main() { yield; }
// { dg-error ".E0627." "" { target *-*-* } .-1 }

